# Agents

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_EXAMPLES.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCKER_VALIDATION_REPORT.md  DOCUMENTATION_SUMMARY.md  Dockerfile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  postman_collection.json  postman_collection_updated.json  pyproject.toml  requirements.txt  start.sh  test_api.sh  validate_system.py
docker/: nginx.conf  prometheus.yml  redis.conf
scripts/: dev_setup.py
src/: main.py
src/agents/base/: __init__.py  agent.py
src/agents/implementations/: __init__.py  dummy_agent.py  general_assistant_enhanced.py  summarizer_agent.py  vision_agent.py
src/agents/registry/: __init__.py  manager.py
src/api/: routes.py
src/api/v1/: agent_routes.py  agents.py  health.py  mcp.py  models.py  schemas.py
src/config/: settings.py
src/core/: exceptions.py  logging.py  middleware.py
src/mcp/: README.md  __init__.py  manager.py
src/mcp/base/: __init__.py  tool.py
src/mcp/servers/: __init__.py  web_search.py
src/memory/: __init__.py  conversation.py
src/observability/: README.md  __init__.py  langsmith.py
src/orchestrator/: __init__.py  workflow.py
src/prompts/: __init__.py  manager.py
src/prompts/templates/: general_assistant.json  summarizer_agent.json  vision_agent.json
src/services/: model_manager.py
src/tools/: __init__.py  base_tools.py
src/utils/: file_utils.py
tests/: test_agent_registry.py
tests/examples/: __init__.py  quickstart.py
